:art: Improved data structure
