# APIServer/Areas/Content/Models/Gallery.cs
@@ -1,4 +1,4 @@
-﻿using APIServer.Utilities;
+using APIServer.Utilities;
 using System;
 using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
@@ -7,13 +7,10 @@ using System.Threading.Tasks;
 
 namespace APIServer.Areas.Content.Models
 {
-    public class Album : BaseEntity
+    public class Gallery
     {
         public int Id { get; set; }
         [Required]
-        public string Title { get; set; }
-        public string Genre { get; set; }
-        public ICollection<Song> Songs { get; set; }
-        public Media CoverImage { get; set; }
+        public ICollection<Media> Media { get; set; }
     }
 }
