# APIServer/Areas/Content/Models/Media.cs
@@ -10,21 +10,13 @@ namespace APIServer.Areas.Content.Models
     public class Media : BaseEntity
     {
         public int Id { get; set; }
-        public string Preview { get; set; }
         [Required]
         public string Url { get; set; }
         [Required]
         public MediaType Type { get; set; }
         [Required]
         public bool IsVisible { get; set; }
-        public int? SongId { get; set; }
-        public Song Song { get; set; }
-        public int? PostId { get; set; }
-        public Post Post { get; set; }
-        public int? ArticleId { get; set; }
-        public Article Article { get; set; }
-        public int? AlbumId { get; set; }
-        public Album Album { get; set; }
+        public ICollection<Gallery> Gallery { get; set; }
 
         public enum MediaType
         {
