# APIServer/Areas/Content/Models/Song.cs
@@ -10,13 +10,14 @@ namespace APIServer.Areas.Content.Models
     public class Song : BaseEntity
     {
         public int Id { get; set; }
-        public int? AlbumId { get; set; }
         public Album Album { get; set; }
         [Required]
         public string Title { get; set; }
         public string Genre { get; set; }
-        public string SoundCloud { get; set; }
         [Required]
         public bool IsHighlight { get; set; }
+        public string SoundCloud { get; set; }
+        public int? AudioId { get; set; }
+        public Media Audio { get; set; }
     }
 }
