# openapi.json
@@ -1596,6 +1596,73 @@
   },
   "components": {
     "schemas": {
+      "MediaType": {
+        "enum": [
+          0,
+          1,
+          2
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
+      "Gallery": {
+        "required": [
+          "media"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "media": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Media"
+            }
+          }
+        },
+        "additionalProperties": false
+      },
+      "Media": {
+        "required": [
+          "isVisible",
+          "type",
+          "url"
+        ],
+        "type": "object",
+        "properties": {
+          "created": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModified": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "url": {
+            "type": "string"
+          },
+          "type": {
+            "$ref": "#/components/schemas/MediaType"
+          },
+          "isVisible": {
+            "type": "boolean"
+          },
+          "gallery": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Gallery"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "Song": {
         "required": [
           "isHighlight",
@@ -1615,11 +1682,6 @@
             "type": "integer",
             "format": "int32"
           },
-          "albumId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
           "album": {
             "$ref": "#/components/schemas/Album"
           },
@@ -1630,12 +1692,20 @@
             "type": "string",
             "nullable": true
           },
+          "isHighlight": {
+            "type": "boolean"
+          },
           "soundCloud": {
             "type": "string",
             "nullable": true
           },
-          "isHighlight": {
-            "type": "boolean"
+          "audioId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "audio": {
+            "$ref": "#/components/schemas/Media"
           }
         },
         "additionalProperties": false
@@ -1671,6 +1741,9 @@
               "$ref": "#/components/schemas/Song"
             },
             "nullable": true
+          },
+          "coverImage": {
+            "$ref": "#/components/schemas/Media"
           }
         },
         "additionalProperties": false
@@ -1813,19 +1886,9 @@
         },
         "additionalProperties": false
       },
-      "MediaType": {
-        "enum": [
-          0,
-          1,
-          2
-        ],
-        "type": "integer",
-        "format": "int32"
-      },
       "Post": {
         "required": [
-          "heading",
-          "isEvent"
+          "title"
         ],
         "type": "object",
         "properties": {
@@ -1841,87 +1904,24 @@
             "type": "integer",
             "format": "int32"
           },
-          "heading": {
+          "title": {
             "type": "string"
           },
-          "body": {
+          "content": {
             "type": "string",
             "nullable": true
           },
-          "isEvent": {
-            "type": "boolean"
-          },
-          "eventUrl": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "Media": {
-        "required": [
-          "isVisible",
-          "type",
-          "url"
-        ],
-        "type": "object",
-        "properties": {
-          "created": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModified": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "preview": {
+          "link": {
             "type": "string",
             "nullable": true
           },
-          "url": {
-            "type": "string"
-          },
-          "type": {
-            "$ref": "#/components/schemas/MediaType"
-          },
-          "isVisible": {
-            "type": "boolean"
-          },
-          "songId": {
+          "galleryId": {
             "type": "integer",
             "format": "int32",
             "nullable": true
           },
-          "song": {
-            "$ref": "#/components/schemas/Song"
-          },
-          "postId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "post": {
-            "$ref": "#/components/schemas/Post"
-          },
-          "articleId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "article": {
-            "$ref": "#/components/schemas/Article"
-          },
-          "albumId": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "album": {
-            "$ref": "#/components/schemas/Album"
+          "gallery": {
+            "$ref": "#/components/schemas/Gallery"
           }
         },
         "additionalProperties": false
